# memory-access

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  RACE_CONDITION_VALIDATION.md  README.md  analyze_chunks.py  mcp-config-example.json  pyproject.toml  test-release.txt  test_search.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  tests.yml
agents/: orchestrator.md  worker-readonly.md  worker-readwrite.md  worker-test.md
commands/: setup-memory-access.md
docs/: PUBLISHING.md  orchestrator-hooks-spec.md  task-state-runbook.md
docs/plans/: 2026-02-07-add-knowledge-base-design.md  2026-02-07-knowledge-bases.md  2026-02-07-setup-wizard-design.md  2026-02-08-auto-version-bump-release.md  2026-02-15-orchestrator-output-flow-design.md
hooks/: hooks.json  orchestrator-hooks.example.json
hooks/examples/: watchdog-future-skew.json  watchdog-future-skew.output.json  watchdog-pass.json  watchdog-pass.output.json  watchdog-timeout.json  watchdog-timeout.output.json
hooks/schemas/: assignment-packet.schema.json  lock-table.schema.json  subagent-result.schema.json
hooks/scripts/: check-pending-insights.sh  check_pending_insights.py  on-lock-update.sh  on_lock_update.py  post-execution.sh  post_execution.py  post_task_dispatch_marker.py  pre-compact.sh  pre-complete.sh  pre-dispatch.sh  pre_bash_no_polling.py  pre_compact.py  pre_complete.py  pre_dispatch.py  pre_task_validate_tools.py  pre_write_scope_check.py  subagent_stop_gate.py  subagent_stop_summary.py  watchdog-timeout.sh  watchdog_timeout.py
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
scripts/: generate_dummy_data.py  setup.py  setup.sh  verify_migration.py
skills/add-knowledge-base/: SKILL.md
skills/multi-agent-operator-guide/: SKILL.md
skills/multi-agent-operator-guide/agents/: openai.yaml
skills/multi-agent-operator-guide/assets/: handoff-template.json
skills/multi-agent-operator-guide/examples/: 01-assignment-invalid-dependency-id.json  01-assignment-invalid-dependency-id.output.json  01-assignment-invalid-empty-normalized-lock.json  01-assignment-invalid-empty-normalized-lock.output.json  README.md  (+16 more)
skills/using-sem-mem/: SKILL.md
skills/using-semantic-memory/: SKILL.md
src/memory_access/: cli.py  crawl.py  embeddings.py  ingest.py  models.py  normalizer.py  orm_models.py  orm_models.pyi  server.py  storage.py  task_store.py
src/sem_mem/: cli.py  ingest.py  models.py  normalizer.py  server.py  storage.py
src/semantic_memory/: __init__.py  embeddings.py  models.py  normalizer.py  server.py  storage.py
src/semantic_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_crawl.py  test_embeddings.py  test_ingest.py  test_kb_integration.py  test_models.py  test_multi_agent_operator_validators.py  test_normalizer.py  test_orchestrator_e2e.py  test_orchestrator_hook_scripts.py  test_orchestrator_hook_watchdog.py  test_quality.py  test_server.py  test_storage.py  test_task_store.py
(+17 files in other folders)
