[project]
name = "sem-mem"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "anthropic>=0.75.0",
    "openai>=1.0.0",
    "aiosqlite>=0.22.0",
    "pydantic>=2.0",
    "numpy>=2.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]

[project.scripts]
sem-mem = "sem_mem.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sem_mem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
